@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="us-ascii"?>
-<project name="cloveretl.engine" default="build" basedir=".">
+<project name="cloveretl.engine" default="build" basedir="." xmlns:jacoco="antlib:org.jacoco.ant">
 
 	<property environment="env"/>
+	<property name="script.name" value="cloveretl.engine\build.xml"/>
 
 	<property name="dir.tools" value="${basedir}/tools"/>
 	<property name="dir.findbugs" value="/opt/findbugs"/>
@@ -25,6 +26,10 @@
 				<include name="*.zip"/>
 			</fileset>
 		</classpath>
+	</taskdef>
+	
+	<taskdef uri="antlib:org.jacoco.ant" resource="org/jacoco/ant/antlib.xml">
+		<classpath path="${dir.tools}/jacocoant.jar"/>
 	</taskdef>
 
 	<!-- ProGuard task definition -->
@@ -70,6 +75,8 @@
 	<property name="dir.pmdreport" value="${dir.build}/pmdreport" />
 	<property name="pmd.ruleset.file" value="${dir.build-scripts}/pmd-ruleset.xml" />
 	<property name="dir.licenses" value="${basedir}/licenses" />
+	<property name="run.coverage" value="false" />
+	<property name="jacoco.exec.file" location="${basedir}/jacoco.exec"/>
 	
 	<!--load external properties-->
 	<property file="build-local.properties"/>
@@ -635,10 +642,10 @@ This software is licensed under the terms you may find in the file named "LICENS
 			<exclude name="test/**/*"/>
 		</jar>
 		
-		<echo message="*** Creating jar ${dir.package}/lib/cloveretl.engine.src.jar from dir.src.improved" />
-		<jar destfile="${dir.package}/lib/cloveretl.engine.src.jar" basedir="${dir.src.improved}">
+		<echo message="*** Creating zip ${dir.package}/lib/cloveretl.engine.src.zip from dir.src.improved" />
+		<zip destfile="${dir.package}/lib/cloveretl.engine.src.zip" basedir="${dir.src.improved}">
 			<exclude name="log4j.properties"/>
-		</jar>
+		</zip>
 
 		<!-- copy all libraries from lib directory -->
 		<copy todir="${dir.package}/lib">
@@ -675,7 +682,8 @@ This software is licensed under the terms you may find in the file named "LICENS
 
 	<!-- make a temp copy of source - necessary to substitute release number constants in the source code -->
 	<target name="improve-java-sources">
-		<echo message="Copying source code.." />
+		<echo message="*** ${script.name}, target: improve-java-sources" />
+		<echo message="Copying source code - from dir.src-${dir.src} to dir.src.improved-${dir.src.improved}." />
 		<copy todir="${dir.src.improved}" encoding="UTF-8">
 			<fileset dir="${dir.src}" />
 		</copy>
@@ -688,12 +696,13 @@ This software is licensed under the terms you may find in the file named "LICENS
 			<replacefilter token="LIBRARY_BUILD_DATETIME = &quot;&quot;" value="LIBRARY_BUILD_DATETIME = &quot;${build.time}&quot;"/>
 			<replacefilter token="LIBRARY_BUILD_YEAR = &quot;&quot;" value="LIBRARY_BUILD_YEAR = &quot;${build.year}&quot;"/>
 		</replace>
+		
 		<if>
 			<not>
 				<equals arg1="${java.src.header.file}" arg2="" trim="true"/>
 			</not>
 			<then>
-				<echo>Changing license of all files - license file ${java.src.header.file}</echo>
+				<echo>Changing license of all files - license file java.src.header.file:${java.src.header.file} for all in dir.src.improved:${dir.src.improved}</echo>
 				<fileheading heading="${java.src.header.file}">
 					<fileset dir="${dir.src.improved}" includes="**/*.java"/>
 				</fileheading>
@@ -917,6 +926,9 @@ This software is licensed under the terms you may find in the file named "LICENS
 	<target name="reports-hudson-detail" depends="pmd,dist,runtests-with-testdb-coverage,coverage-html,coverage-xml,findbugs-xml,findbugs-xml-plugins,javadoc">
 	</target>
 	
+	<target name="reports-hudson-jacoco" depends="dist,runtests-detail">
+	</target>
+	
 	<target name="reports-hudson-optimalized"  depends="dist,runtests-with-testdb">
 	</target>
 		
@@ -1000,6 +1012,12 @@ This software is licensed under the terms you may find in the file named "LICENS
 		<antcall target="runtests-plugins" inheritall="true" inheritrefs="true"/>
 	</target>
 	
+	<target name="runtests-jacoco" depends="" description="Runs engine and plugins JUnit tests with JaCoCo">
+		<property name="test.cloveretl.plugins" value="${dir.package}/plugins"/>
+		<antcall target="runtests-engine-jacoco" inheritall="true" inheritrefs="true"/>
+		<!--<antcall target="runtests-plugins-jacoco" inheritall="true" inheritrefs="true"/>-->
+	</target>
+	
 	<target name="runtests-coverage" depends="coverage-instrument" description="Runs engine and plugins JUnit tests with test coverage report">
 		<property name="test.cloveretl.plugins" value="${dir.coverage.plugins}/plugins"/>
 		<property name="dir.test.additional.classpath" value="${dir.coverage.bin}"/>
@@ -1045,6 +1063,48 @@ This software is licensed under the terms you may find in the file named "LICENS
 			<formatter type="plain"/>
 			<formatter classname="eu.javlin.ant.junit.ExtXMLJUnitResultFormatter" extension=".xml"/>
 		</junit>
+	</target>
+	
+	<target name="runtests-engine-jacoco" depends="init,compile,compile-tests" description="Runs Clover engine JUnit tests and JaCoCo">
+		<mkdir dir="${dir.testsresult}"/>
+		<echo message="Running all tests from ${dir.src.test} includes ${test.include} excludes ${test.exclude}"/>
+		<echo message="Running coverage (JaCoCo): ${run.coverage}"/>
+		<echo message="JaCoCo destination file: ${jacoco.exec.file}"/>
+		<jacoco:coverage destfile="${jacoco.exec.file}">
+			<junit 
+						showoutput="true"
+						haltonerror="false" 
+						haltonfailure="false" 
+						printsummary="true"
+						fork="true"
+						forkmode="once" 
+						>
+				<sysproperty key="file.encoding" value="UTF-8" />
+				<jvmarg value="-Xmx2048m"/>
+				<jvmarg value="-XX:MaxPermSize=512m"/>
+				<jvmarg value="-Dderby.system.home=${dir.examples}/ExtExamples"/>
+				<env key="cloveretl.plugins" value="${test.cloveretl.plugins}"/>
+				<classpath>
+					<pathelement path="${dir.classestest}"/>
+					<pathelement path="${dir.test.additional.classpath}"/>
+					<pathelement path="${dir.package.classes}"/>
+					<fileset dir="${dir.lib}">
+						<include name="*.jar"/>
+					</fileset>
+					<pathelement path="${dir.examples}/ExtExamples/lib/derby/lib/derby.jar"/>
+					<pathelement path="${dir.tools}/junit-4.11.jar"/>
+					<pathelement path="${dir.tools}/hamcrest-core-1.3.jar"/>
+					<pathelement path="${dir.tools}/junit.xml.formatter.jar"/>
+				</classpath>
+				<batchtest todir="${dir.testsresult}">
+					<fileset dir="${dir.src.test}" excludes="${test.exclude}">
+						<include name="${test.include}"/>
+					</fileset>
+				</batchtest>
+				<formatter type="plain"/>
+				<formatter classname="eu.javlin.ant.junit.ExtXMLJUnitResultFormatter" extension=".xml"/>
+			</junit>
+		</jacoco:coverage>
 	</target>
 	
 	<target name="runtests-plugins" depends="compile-tests,build-plugins" unless="runtests-plugins-dontrun">
@@ -1133,6 +1193,21 @@ This software is licensed under the terms you may find in the file named "LICENS
 		</ant>
 	</target>
 	
+	<target name="runtests-scenario-jacoco" if="cte.environment.config">
+		<echo message="Executing Clover Test Environment environment - jacoco"/>
+		<ant target="run-scenarios-with-engine-build-jacoco" dir="../cloveretl.test.environment" inheritAll="false" inheritrefs="false">
+			<property name="environment.config" value="${cte.environment.config}"/>
+			<property name="scenarios" value="detail.ts" />
+			<property name="dir.engine.classes" value="${dir.package.classes}"/>
+			<property name="dir.engine.build" value="${dir.package}/lib"/>
+			<property name="dir.plugins" value="${dir.package}/plugins"/>
+			<property name="version.full" value="${version.full}"/>
+			<property name="hudson.link" value="${cte.hudson.link}"/>
+			<property name="logpath" value="${cte.logpath}"/>
+			<property name="testenv.etlenvironment" value="engine"/>
+		</ant>
+	</target>
+	
 	<!-- this target is here to ensure that plugins are built before the target runtests-engine is called -->
 	<target name="runtests-tests-reset">
 		<echo message="Executing Clover Test Environment environment - tests reset"/>
@@ -1191,6 +1266,13 @@ This software is licensed under the terms you may find in the file named "LICENS
 				<antcall target="clean-eval-license" />
 			</sequential>
 		</parallel>
+	</target>
+	
+	<target name="runtests-detail">
+		<antcall target="generate-eval-license" />
+		<antcall target="runtests-scenario-jacoco" />
+		<antcall target="runtests-jacoco" />
+		<antcall target="clean-eval-license" />
 	</target>
 	
 	<target name="start-testdb">
@@ -1303,9 +1385,12 @@ This software is licensed under the terms you may find in the file named "LICENS
 		</pmd>
 	</target>
 	
-	<target name="check-sources" depends="check-sources-engine,check-sources-plugins"/>
+	<target name="check-sources" depends="check-sources-engine,check-sources-plugins">
+		<echo message="*** ${script.name}, target: check-sources" />	
+	</target>
 	
 	<target name="check-sources-engine">
+		<echo message="*** ${script.name}, target: check-sources-engine, java.src.header.file.opensource - ${java.src.header.file.opensource}" />	
 		<fileheading heading="${java.src.header.file.opensource}" dryrun="true" propertyifrewritten="java.src.header.invalid">
 			<fileset dir="${dir.src}">
 				<include name="**/*.java"/>
@@ -1323,9 +1408,13 @@ This software is licensed under the terms you may find in the file named "LICENS
 	</target>
 	
 	<target name="check-sources-plugins">
+		<echo message="*** ${script.name}, target: check-sources-plugins"/>
+		<echo message="*** Running target check-sources-plugin for each from plugin.list: ${plugin.list} with param plugin.dir - ${plugin.dir} " />
 		<foreach list="${plugin.list}" inheritall="true" target="check-sources-plugin" param="plugin.dir"/>
 	</target>
+	
 	<target name="check-sources-plugin">
+		<echo message="*** ${script.name}, target: check-sources-engine, java.src.header.file.opensource - ${java.src.header.file.opensource}" />
 		<echo message="Check file heading plugin - ${plugin.dir}"/>
 		<ant dir="../${plugin.dir}" target="check-sources" inheritAll="false" inheritrefs="false">
 		</ant>
